<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".Client.UI.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="2"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:useDefaultMargins="false"
        >

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/serverHostText"
            android:id="@+id/serverHostTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/serverHostEditText"
            android:layout_width="243dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/serverPortText"
            android:id="@+id/serverPortTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/serverPortEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/userNameText"
            android:id="@+id/userNameTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/passwordText"
            android:id="@+id/passwordTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"

            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/firstNameText"
            android:id="@+id/firstNameTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastNameText"
            android:id="@+id/lastNameTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/emailText"
            android:id="@+id/emailTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="244dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/genderText"
            android:id="@+id/genderTextView"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_gravity="right|center_vertical" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation='horizontal'
            android:layout_margin="0dp"
            android:padding="0dp">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:checked="true"
                android:padding="0dp"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="@string/maleText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:checked="true"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="@string/femaleText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </RadioGroup>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:text="@string/signInText"
            app:backgroundTint="@color/purple_700" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/registerText"
            app:backgroundTint="@color/purple_700" />

    </LinearLayout>

</LinearLayout>